<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/space_legion"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_homepage_button"
        android:text="@string/moto"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/our_guides"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="238dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_homepage_button"
        android:text="@string/last_updated_20_11_2020"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gnu_linux"
        android:layout_width="104dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_homepage_button"
        android:text="@string/gnu_linux"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/android_button"
        android:layout_width="104dp"
        android:layout_height="58dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/custom_homepage_button"
        android:text="@string/android"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/security_button"
        android:layout_width="104dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/security"
        android:textAllCaps="false"
        android:background="@drawable/custom_homepage_button"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gnu_linux" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/privacy_button"
        android:layout_width="104dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/privacy"
        android:textAllCaps="false"
        android:background="@drawable/custom_homepage_button"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/servers_button"
        android:layout_width="104dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/servers"
        android:textAllCaps="false"
        android:background="@drawable/custom_homepage_button"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/misc_button"
        android:layout_width="104dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/misc"
        android:textAllCaps="false"
        android:background="@drawable/custom_homepage_button"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacy_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/about_button"
        android:layout_width="104dp"
        android:layout_height="58dp"
        android:layout_marginTop="340dp"
        android:background="@drawable/custom_homepage_button"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
</androidx.constraintlayout.widget.ConstraintLayout>