<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".KVM">

    <TextView
        android:id="@+id/header_kvm_install"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/kvm_guide"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="621dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:divider="@drawable/empty_space_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_kvm_install">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ubuntu_kvm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/insidepage_custom_button"
            android:fontFamily="monospace"
            android:text="@string/ubuntu"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fedora_kvm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/insidepage_custom_button"
            android:fontFamily="monospace"
            android:text="@string/fedora"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/arch_kvm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/insidepage_custom_button"
            android:fontFamily="monospace"
            android:text="@string/arch"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>